<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Ahadi</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_login_screen">LoginScreen</string>
    <string name="title_activity_rgister_screen">RgisterScreen</string>
    <string name="title_activity_home_screen">HomeScreen</string>
    <string name="title_activity_splash_screen">SplashScreen</string>
    
    <string name="welregister">register</string>
    <string name="welLogin">Login</string>
    
    <string name="regFname">First Name</string>
    <string name="regSname">Second Name</string>
    <string name="regEmail">Email/userName</string>
    <string name="regPaswd">Password</string>
    <string name="regbtnsubmit">Submit</string>
    <string name="regbtncancel">Cancel</string>
    
    <string name="logEmail">Email Address</string>
    <string name="logPswd">Password</string>
    <string name="logbtnSubmit">Submit</string>
    <string name="logbtncancel">Cancel</string>
    
    <string name="title_activity_welcome_screen">WelcomeScreen</string>
    <string name="donate">donate</string>
    <string name="volunteer">volunteer</string>
    <string name="fnumber">First Number</string>
    <string name="snumber">Second Number</string>
    <string name="result">Result:</string>
    <string name="btnAdd">Add</string>
    <string name="btnsubtract">subtract</string>
    <string name="btnmultiply">multiply</string>
    <string name="btndivide">divide</string>
    <string name="btnIconsubmit">Submit</string>
    <string name="btnIconcancel">Cancel</string>
    <string name="title_activity_splash_screen1">SplashScreen1</string>

</resources>
