<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/po"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/tvRegisterFname"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/regFname"
        android:textSize="15sp"
        android:textStyle="italic"
        android:layout_margin="5dp"
        android:textColor="#FFFFFF" />

    <EditText
        android:id="@+id/etRegisterFname"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
       android:textColor="@color/white" 
        android:ems="10"
        android:inputType="textPersonName" >

        <requestFocus />
    </EditText>

    <TextView
        android:id="@+id/tvRegisterSname"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/regSname"
        android:textStyle="italic"
        android:textSize="15sp"
       	android:layout_margin="5dp"
        android:textColor="#FFFFFF" />

    <EditText
        android:id="@+id/etRegisterSname"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/white" 
        android:ems="10"
        android:inputType="textPersonName" />

    <TextView
        android:id="@+id/tvRegisterEmail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/regEmail"
        android:textStyle="italic"
        android:layout_margin="5dp"
        android:textSize="15sp"
        android:textColor="#FFFFFF" />

    <EditText
        android:id="@+id/etRegisterEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/white" 
        android:ems="10"
        android:inputType="textEmailAddress" />

    <TextView
        android:id="@+id/tvRegisterPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/regPaswd"
        android:textStyle="italic"
        android:textSize="15sp"
        android:layout_margin="5dp"
        android:textColor="#FFFFFF" />

    <EditText
        android:id="@+id/etRegisterPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/white" 
        android:ems="10"
        android:inputType="textPassword" />
    

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal" >
    

 

   <Button
        android:id="@+id/btnRegisterSubmit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:background="@color/light_green"
        android:layout_gravity="center_vertical"
        android:layout_margin="35dp"
        android:layout_weight="1"
        android:text="@string/regbtnsubmit" />

    <Button
        android:id="@+id/btnRegisterCancel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_margin="35dp"
        android:background="@color/light_green"
        android:layout_weight="1"
        android:layout_gravity="center_vertical"
        android:text="@string/regbtncancel" />
    
    </LinearLayout>
</LinearLayout>

